--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@ body {
     overflow-x:hidden;
     flex-direction: column;
     width: 100%;
+ 
   }
   
 
   main{
     box-sizing: border-box;
     width: 100%;
+   
   }
 a{
     text-decoration: none;
@@ -207,24 +209,40 @@ a{
 
 
 .basic-section{
-  height: 40vh;
+  height: 35vh;
   padding: 3.6%;
   margin-left: 280px;
   display: flex;
-
+  flex-direction: column;
   
 }
 
-
 .basic-section .col1{
-    flex: 3;
+  flex: 5;
+}
+
+.basic-section .buttons{
+  flex: 2;
+  margin-bottom: 10px;
+}
+
+.basic-section .buttons{
+  justify-content: flex-end;
+}
+
+.basic-section .row1{
+  display: flex;
 
 }
 
-.basic-section .col2{
-    flex: 2;
-    width: 50%;
-   
+.basic-section .row2{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.basic-section .snip1504 {
+ max-width: 250px;
 }
 
 @media screen and (max-width: 1020px) {
@@ -237,10 +255,10 @@ a{
 }
 
 
-.basic-section h1{
+.basic-section h2{
   color: #292929;
   border-left: #D67553 4px solid;
-  padding-left: 5px;
+  padding-left: 15px;
   margin: 0.5em;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -362,6 +380,15 @@ a{
     margin-right: 10px;
 }
 
+
+
+
+/* - - - - - - - - - - */
+/* - - - CONTACT - - -*/
+/* - - - - - - - - - */
+
+
+
 /* - - - - - - - - - */
 /* - - - WORK - - - -*/
 /* - - - - - - - - - */
@@ -370,7 +397,7 @@ a{
   background-color: #f5f8fd;
 }
 
-.row {
+.zerow {
   background-color: #fff;
   display: flex;
   flex-wrap: wrap;
@@ -379,8 +406,7 @@ a{
   margin-bottom: 2em;
   margin-top: 2em ;
   padding: 2em 4em 4em 4em;
- 
-  
+  flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
@@ -504,15 +530,30 @@ a{
 /*       RETEX        */
 /* - - - - - - - - - -*/     
 
-.odomo{
-  height: 100em;
+.all_retex{
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.retex_title{
-  text-align: center;
+
+.retex_title i{
+  color: #292929;
+  text-align: left;
+  z-index: 2;
+  font-size: 1.5em;
+  position: absolute;
+  margin-top: 0;
+  margin-left: -1.3em;
 }
+
+.retex_title i:hover{
+  color: #D67553;
+}
+
+
 
 .retex_title h1{
+  text-align: center;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 3rem;
@@ -520,11 +561,66 @@ a{
 }
 
 .retex_title p{
+  text-align: center;
   font-weight: 350;
   font-size: 1.2em;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 0.4em;
 }
 
+.information_card + .ligne{
+  margin-top: 2em;
+}
+
+.information_card{
+border: #6b6a6a solid ;
+padding: 2em;
+font-size: 1.35em;
+display: flex;
+width: 100%;
+justify-content: space-between;
+margin-top: 2em;
+overflow: hidden;
+}
+
+.information_card img{
+    object-fit: contain;
+    width: 95%;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+}
+
+
+
+.information_card hr{
+  margin: 4px 0 4px 0;
+}
+
+.information_card ul{
+  list-style-type: none;
+ 
+}
+.information_card i{
+  color: #D67553;
+  margin-right: 5px;
+}
+
+.ligne{
+  text-align: justify;
+}
+
+@media screen and (max-width: 1220px){
+  .row{
+    padding: 2em 2em 2em 2em;
+  }
+
+  .information_card{
+    display: flex;
+    flex-direction: column;
+   
+    }
+    .col2{
+      margin-top: 2em;
+    }
+}
 
 
 
@@ -575,7 +671,7 @@ a{
     width: 100%   ;
   }
 
-  .row {
+  .zerow {
     
     margin-left: 1em;
   }
@@ -606,6 +702,326 @@ a{
   .buttons{
     margin-top: 0;
   }
+
+
+}
+
+@media screen and (max-width: 580px) {
+.information_card{
+  font-size: 1em;
+  max-width: 300px;
+  padding: 0;
+  text-align: center;
+}
+
+.zerow{
+  justify-content: center;
+}
 }
 
 
+
+
+
+
+/* - - - - - - - - */
+/* EXPERIMENT ZONE*/
+/* - - - - - - - -*/
+
+
+#contact {
+  width: 100%;
+  height: 100%;
+}
+
+.section-header {
+ 
+  
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+  color: #292929;
+}
+
+.section-header+h2{
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-left: 2px;
+  margin-bottom: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+ 
+  position: relative;
+  max-width: 840px;
+}
+
+/* Left contact page */
+.form-horizontal {
+  float: left;
+  max-width: 400px;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-control{
+  display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;  
+}
+
+textarea.form-control {
+  height: auto;
+  font-family: sans-serif;
+}
+
+.form-control, 
+textarea {
+  max-width: 400px;
+
+  color: #D67553;
+  letter-spacing: 1px;
+}
+
+.send-button {
+  margin-top: 15px;
+  height: 34px;
+  width: 400px;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+}
+
+.alt-send-button {
+  width: 400px;
+  height: 34px;
+  transition: all .2s ease-in-out;
+}
+
+.send-text {
+  display: block;
+  margin-top: 10px;
+  font: 700 12px 'Lato', sans-serif;
+  letter-spacing: 2px;
+}
+
+.alt-send-button:hover {
+  transform: translate3d(0px, -29px, 0px);
+}
+
+/* Begin Right Contact Page */
+.direct-contact-container {
+  max-width: 400px;
+}
+
+.direct-contact-container hr{
+  margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+
+
+
+/* Location, Phone, Email Section */
+.contact-list {
+  list-style-type: none;
+
+  padding-right: 20px;
+}
+
+.contact-list i:hover{
+  color: #D67553;
+}
+
+.list-item {
+  line-height: 4;
+  color: #aaa;
+}
+
+.contact-text {
+  font: 300 18px 'Lato', sans-serif;
+  letter-spacing: 1.9px;
+  color: #bbb;
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.place {
+  margin-left: 1.3em;
+}
+
+.phone {
+  margin-left: 0.9em;
+}
+
+.gmail {
+  margin-left: 1em;
+}
+
+.contact-text a {
+  color: #bbb;
+  text-decoration: none;
+  transition-duration: 0.2s;
+}
+
+.contact-text a:hover {
+  color: #292929;
+  text-decoration: none;
+}
+
+
+/* Social Media Icons */
+.social-media-list {
+  position: relative;
+  font-size: 22px;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.social-media-list li a {
+  color: #D67553;
+}
+
+.social-media-list li {
+  position: relative; 
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 10px 3px;
+  line-height: 60px;
+  border-radius: 50%;
+  color: #D67553;
+  background-color: rgb(27,27,27);
+  cursor: pointer; 
+  transition: all .2s ease-in-out;
+}
+
+.social-media-list li:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: 0 0 0 1px #292929;
+  transition: all .2s ease-in-out;
+}
+
+.social-media-list li:hover {
+  background-color: #D67553; 
+}
+
+.social-media-list li:hover:after {
+  opacity: 1;  
+  transform: scale(1.12);
+  transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
+}
+
+.social-media-list li:hover a {
+  color: #000;
+}
+
+.copyright {
+  font: 200 14px 'Oswald', sans-serif;
+  color: #555;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+hr {
+  border-color: rgba(255,255,255,.6);
+}
+
+/* Begin Media Queries*/
+@media screen and (max-width: 850px) {
+  .contact-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .direct-contact-container, .form-horizontal {
+    margin: 0 auto;
+  }  
+  
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 300px;
+  }    
+  .social-media-list li {
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+  }
+  .social-media-list li:after {
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+  }
+}
+
+@media screen and (max-width: 569px) {
+
+  .direct-contact-container, .form-wrapper {
+    float: none;
+    margin: 0 auto;
+  }  
+  .form-control, textarea {
+    
+    margin: 0 auto;
+  }
+ 
+  
+  .name, .email, textarea {
+    width: 280px;
+  } 
+  
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 280px;
+  }  
+  .social-media-list {
+    left: 0;
+  }
+  .social-media-list li {
+    height: 55px;
+    width: 55px;
+    line-height: 55px;
+    font-size: 2rem;
+  }
+  .social-media-list li:after {
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+  }
+  
+}
+
+@media screen and (max-width: 410px) {
+  .send-button {
+    width: 99%;
+  }
+}
