--- a/style.css
+++ b/style.css
@@ -52,6 +52,30 @@ a {
   overflow-y: auto;
 }
 
+#header.show{
+display: block;
+position: absolute;
+left: 0;
+}
+
+#hamburger-btn {
+  z-index: 12;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  background-color: #292929;
+  border-radius: 50%;
+  color: #D67553;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 2em;
+  top: 2em;
+  display: none;
+}
+
+
+
 #header .profile {
   padding-top: 18px;
 }
@@ -876,6 +900,10 @@ h1::-moz-selection {
     left: -280px;
   }
 
+  #hamburger-btn{
+    display: block;
+  }
+
   #header {
     display: none;
   }
@@ -976,7 +1004,8 @@ h1::-moz-selection {
   #intro{
     padding-left: 1em;
     padding-right: 1em;
-    
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .button-a {
