--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ left: 0;
   color: #D67553;
   border: none;
   cursor: pointer;
-  position: absolute;
-  right: 2em;
-  top: 2em;
+  position: fixed;
+  right: 0.2em;
+  top: 0.2em;
   display: none;
 }
 
@@ -873,6 +873,61 @@ h1::-moz-selection {
 }
 
 
+/* - - - - - - - - - - - -*/
+/* - - C O N T A C T - - */
+/* - - - - - - - - - - -*/
+
+input[type=text], textarea, input[type=email] {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  margin-right: 0px;
+  margin-left: 0px;
+  resize: vertical;
+}
+label{margin-right: 0px;
+  margin-left: 0px;
+  width: 100%;
+  font-family:  "Poppins", sans-serif;
+}
+
+input[type=submit] {
+  background-color: #D67553;
+  color: white;
+  font-size: 16px;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #cf582d;
+}
+
+.container {
+  /* Ajouter box-sizing */
+  box-sizing : border-box;
+  border-radius:5px;
+  background-color:#f2f2f2;
+  padding:20px;
+  width: 100%;
+  /* redéfinition 400 + 2*20 */
+  max-width: 440px;
+  margin:0 auto;
+}
+
+@media screen and (min-width: 1221px) {
+  .information_card .col1{
+    margin-right: 3em;
+  }
+}
+
 @media screen and (max-width: 1220px) {
   .row {
     padding: 2em 2em 2em 2em;
@@ -1122,13 +1177,18 @@ h1::-moz-selection {
 
 @media (max-width: 440px) {
 
-
+  .zerow{
+    padding: 1em 2em 2em 1em;
+  }
 
   .headerWrapper {
     position: static;
     padding: 0;
   }
 
+  #header{
+    width: 180px;
+  }
 
   #services {
     width: 134px;
@@ -1140,6 +1200,10 @@ h1::-moz-selection {
 
   #contact {
     width: 125px;
+  }
+
+  #section-about .col2 {
+    justify-content: flex-start;
   }
 
   .headerWrapper h6 {
@@ -1198,200 +1262,6 @@ h1::-moz-selection {
   max-width: 840px;
 }
 
-/* Left contact page */
-.form-horizontal {
-  float: left;
-  max-width: 400px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 400;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-textarea.form-control {
-  height: auto;
-  font-family: sans-serif;
-}
-
-.form-control,
-textarea {
-  max-width: 400px;
-
-  color: #D67553;
-  letter-spacing: 1px;
-}
-
-.send-button {
-  margin-top: 15px;
-  height: 34px;
-  width: 400px;
-  overflow: hidden;
-  transition: all .2s ease-in-out;
-}
-
-.alt-send-button {
-  width: 400px;
-  height: 34px;
-  transition: all .2s ease-in-out;
-}
-
-.send-text {
-  display: block;
-  font: 700 12px 'Lato', sans-serif;
-  letter-spacing: 2px;
-}
-
-.alt-send-button:hover {
-  transform: translate3d(0px, -29px, 0px);
-}
-
-/* Begin Right Contact Page */
-.direct-contact-container {
-  max-width: 400px;
-}
-
-.direct-contact-container hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-}
-
-
-
-/* Location, Phone, Email Section */
-.contact-list {
-  list-style-type: none;
-
-  padding-right: 20px;
-}
-
-.contact-list i:hover {
-  color: #D67553;
-}
-
-.list-item {
-  line-height: 4;
-  color: #aaa;
-}
-
-.contact-text {
-  font: 300 18px 'Lato', sans-serif;
-  letter-spacing: 1.9px;
-  color: #bbb;
-  margin-top: 150px;
-  margin-bottom: 150px;
-}
-
-.place {
-  margin-left: 1.3em;
-}
-
-.phone {
-  margin-left: 0.9em;
-}
-
-.gmail {
-  margin-left: 1em;
-}
-
-.contact-text a {
-  color: #bbb;
-  text-decoration: none;
-  transition-duration: 0.2s;
-}
-
-.contact-text a:hover {
-  color: #292929;
-  text-decoration: none;
-}
-
-
-/* Social Media Icons */
-.social-media-list {
-  position: relative;
-  font-size: 22px;
-  text-align: center;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.social-media-list li a {
-  color: #D67553;
-}
-
-.social-media-list li {
-  position: relative;
-  display: inline-block;
-  height: 60px;
-  width: 60px;
-  margin: 10px 3px;
-  line-height: 60px;
-  border-radius: 50%;
-  color: #D67553;
-  background-color: rgb(27, 27, 27);
-  cursor: pointer;
-  transition: all .2s ease-in-out;
-}
-
-.social-media-list li:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 50%;
-  opacity: 0;
-  box-shadow: 0 0 0 1px #292929;
-  transition: all .2s ease-in-out;
-}
-
-.social-media-list li:hover {
-  background-color: #D67553;
-}
-
-.social-media-list li:hover:after {
-  opacity: 1;
-  transform: scale(1.12);
-  transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
-}
-
-.social-media-list li:hover a {
-  color: #000;
-}
-
-.copyright {
-  font: 200 14px 'Oswald', sans-serif;
-  color: #555;
-  letter-spacing: 1px;
-  text-align: center;
-}
-
-hr {
-  border-color: rgba(255, 255, 255, .6);
-}
 
 /* Begin Media Queries*/
 @media screen and (max-width: 850px) {
@@ -1400,87 +1270,15 @@ hr {
     flex-direction: column;
   }
 
-  .direct-contact-container,
-  .form-horizontal {
-    margin: 0 auto;
-  }
-
-  .direct-contact-container {
-    margin-top: 60px;
-    max-width: 300px;
-  }
-
-  .social-media-list li {
-    height: 60px;
-    width: 60px;
-    line-height: 60px;
-  }
-
-  .social-media-list li:after {
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-  }
-}
-
-@media screen and (max-width: 569px) {
-
-  .direct-contact-container,
-  .form-wrapper {
-    float: none;
-    margin: 0 auto;
-  }
-
-  .form-control,
-  textarea {
-
-    margin: 0 auto;
-  }
-
-
-  .name,
-  .email,
-  textarea {
-    width: 280px;
-  }
-
-  .direct-contact-container {
-    margin-top: 60px;
-    max-width: 280px;
-  }
-
-  .social-media-list {
-    left: 0;
-  }
-
-  .social-media-list li {
-    height: 55px;
-    width: 55px;
-    line-height: 55px;
-    font-size: 2rem;
-  }
-
-  .social-media-list li:after {
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-  }
 
 }
-
-@media screen and (max-width: 410px) {
-  .send-button {
-    width: 99%;
-  }
-}
-
 
 
 .btn {
 
   cursor: pointer;
   font-weight: 700;
-  font-family: Helvetica, "sans-serif";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   transition: all .2s;
   padding: 10px 20px;
   color: white;
