--- a/style.css
+++ b/style.css
@@ -1245,13 +1245,19 @@ input[type=submit]:hover {
 }
 
 .section-header+h2 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 300;
   margin-left: 2px;
   margin-bottom: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+#mailto, #mailto:visited
+{
+  color: #D67553;
+}
+
+
 
 .contact-wrapper {
   display: flex;
@@ -1368,7 +1374,7 @@ input[type=submit]:hover {
 /* ---- particles.js container ---- */
 canvas{ 
   position: absolute; 
-  height: 33% !important;}
+  height: 30% !important;}
 
 #particles-js {
   background-color: #292929;
